--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
         android:id="@+id/button3"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:onClick="lanzarAcercaDe"
         android:text="@string/Acercade" />
 
     <Button
