--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
         android:id="@+id/button4"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:onClick="salir"
         android:text="@string/Salir" />
 
 </LinearLayout>
